syntax = "proto3";

package calculator;

option java_package = "id.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sumResult  =1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
}